--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -35,7 +35,8 @@ RUN apt-get update \
     && apt-get -y install --no-install-recommends yarn \
     #
     # Install eslint globally
-    && npm install -g eslint \
+    # && npm install -g eslint \
+    && yarn global add bs-platform \
     #
     # [Optional] Update a non-root user to UID/GID if needed.
     && if [ "$USER_GID" != "1000" ] || [ "$USER_UID" != "1000" ]; then \
