--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Node.js Sample",
+    "name": "ResonML Sample",
     "dockerFile": "Dockerfile",
 
     // Use 'appPort' to create a container with published ports. If the port isn't working, be sure
@@ -20,6 +20,6 @@
 
     // Add the IDs of extensions you want installed when the container is created in the array below.
     "extensions": [
-        // "dbaeumer.vscode-eslint"
+        "jaredly.reason-vscode"
     ]
 }
