--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@d10221/vscode-try-remote-reasonml",
   "main": "index.js",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "scripts": {
     "build": "bsb -make-world",
-    "start": "bsb -make-world -w",
-    "clean": "bsb -clean-world"
+    "watch": "bsb -make-world -w",
+    "clean": "bsb -clean-world",
+    "start": "nodemon . --ignore=**/*.re"
   },
   "keywords": [
     "BuckleScript"
@@ -13,6 +14,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "bs-platform": "^7.0.1"
+    "bs-platform": "^8.2.0"
+  },
+  "dependencies": {
+  
   }
 }
